fix overflow on modals

--- a/css/kerryd.css
+++ b/css/kerryd.css
@@ -214,10 +214,25 @@ a:focus {
   width: 75%;
 }
 
+.portfolio-modal .modal-content h2 {
+	font-size: 2em;
+}
+
 .portfolio-modal .modal-content .modal-body ul {
 	text-align: left;
-	margin-left: 10%;
+	margin-left: 5%;
 	margin-bottom: 3em;
+}
+
+@media (min-width:450px) {
+	.portfolio-modal .modal-content h2 {
+		font-size: 3em;
+	}
+	.portfolio-modal .modal-content .modal-body ul {
+		text-align: left;
+		margin-left: 10%;
+		margin-bottom: 3em;
+	}
 }
 
 .portfolio-modal .close-modal .lr {
